fixed responsive nav collapse issue

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -119,7 +119,7 @@ section h2 {
 }
 
 #logo-holder {
-  width: 7%;
+  width: 57px;
 }
 
 .nav-link.py-3.px-0.px-lg-3.rounded.js-scroll-trigger {
